Documentando rotas referente a aula, e atualizando http status code do controller da aula
